--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
     background-image: url(kullan.jpg);
     background-position: center;
+    background-size: cover;
 }
 
 .box {
@@ -17,7 +18,7 @@ body {
     gap: 10px;
     box-sizing: border-box;
     padding: 30px 10px 20px 10px;
-    margin: 8% auto 30px auto;
+    margin: 0px auto 30px auto;
     border-radius: 30px;
     background-image: url(https://images.pexels.com/photos/3109850/pexels-photo-3109850.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     background-position: center;
@@ -190,4 +191,56 @@ footer {
     width: max-content;
     color: #090580;
     text-shadow: #090580 10px 10px 10px;
+}
+
+.light-mode {
+    font-weight: bold;
+    font-size: large;
+    padding: 10px;
+    margin: 3% auto;
+    display: flex;
+    border-radius: 50px;
+    border: 2px solid black;
+    color: white;
+    background-color: black;
+    transition: all 0.25s ease-in-out;
+}
+
+.light-mode:hover {
+    box-shadow: purple 0px 0px 20px 3px;
+    cursor: pointer;
+}
+
+.light-mode:active {
+    box-shadow: purple 0px 0px 20px 3px;
+    scale: 0.8;
+    background-color: white;
+    color: purple;
+    border: 2px solid white;
+}
+
+.dark-mode {
+    font-weight: bold;
+    font-size: large;
+    padding: 10px;
+    margin: 3% auto;
+    display: flex;
+    border-radius: 50px;
+    border: 2px solid white;
+    color: purple;
+    background-color: white;
+    transition: all 0.25s ease-in-out;
+}
+
+.dark-mode:hover {
+    box-shadow: white 0px 0px 20px 3px;
+    cursor: pointer;
+}
+
+.dark-mode:active {
+    box-shadow: white 0px 0px 20px 3px;
+    scale: 0.8;
+    background-color: black;
+    color: white;
+    border: 2px solid black  ;
 }
